[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
web3 = "0.16"  # Make sure this version is compatible with Tokio 1.x
tokio-stream = "0.1.8"  # Ensure this is compatible with Tokio 1.x
tiny-keccak = "2.0"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


